--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
               </p>
             </li>
             <li class="main-li">
-              <h3>Lorem, ipsum.</h3>
+              <h3 class="bbb">Lorem, ipsum.</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Corporis ipsam quibusdam cumque cupiditate quasi. Adipisci?
               </p>
             </li>
             <li class="main-li">
-              <h3>Lorem, ipsum.</h3>
+              <h3 class="ccc">Lorem, ipsum.</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 Possimus necessitatibus asperiores doloremque porro labore
@@ -61,7 +61,7 @@
               </p>
             </li>
             <li class="main-li">
-              <h3>Lorem, ipsum.</h3>
+              <h3 class="ddd">Lorem, ipsum.</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
                 quibusdam quos mollitia velit maxime minus.
@@ -70,6 +70,49 @@
           </ul>
         </div>
       </section>
+      <section>
+        <div class="container">
+          <h2 class="h2">Чим ми займаємось</h2>
+          <ul class="work-ul">
+            <li class="work-li">
+              <img class="box1" src="./box1.webp" alt="" />
+            </li>
+            <li class="work-li">
+              <img class="box2" src="./img(11).webp" alt="" />
+            </li>
+            <li class="work-li">
+              <img class="box3" src="./img(12).webp" alt="" />
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section>
+        <div class="container">
+          <h2 class="team">Наша команда</h2>
+          <ul class="team-ul">
+            <li class="team-li">
+              <img class="box4" src="./team card1(1).webp" alt="" />
+            </li>
+            <li class="team-li">
+              <img class="box5" src="./team card2(1).webp" alt="" />
+            </li>
+            <li class="team-li">
+              <img class="box6" src="./team card3(1).webp" alt="" />
+            </li>
+            <li class="team-li">
+              <img class="box7" src="./team card4(4).webp" alt="" />
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
+    <footer>
+      <ul>
+        <li><p>Webstudio</p></li>
+        <li><address>Lorem, ipsum.</address></li>
+        <li><a href="mailto:infodevstudio.com">infodevstudio.com</a></li>
+        <li><a href="tel:+380961111111">+380 96 111 11 11</a></li>
+      </ul>
+    </footer>
   </body>
 </html>
