--- a/index.html
+++ b/index.html
@@ -91,22 +91,30 @@
           <h2 class="team">Наша команда</h2>
           <ul class="team-ul">
             <li class="team-li">
-              <img class="box4" src="./team card1(1).webp" alt="" />
+              <img class="box4" src="./img (17).webp" alt="" />
+              <h4>Lorem, ipsum.</h4>
+              <p class="pp">Lorem, ipsum.</p>
             </li>
             <li class="team-li">
-              <img class="box5" src="./team card2(1).webp" alt="" />
+              <img class="box5" src="./img (14).webp" alt="" />
+              <h4>Lorem, ipsum.</h4>
+              <p class="pp">Lorem, ipsum.</p>
             </li>
             <li class="team-li">
-              <img class="box6" src="./team card3(1).webp" alt="" />
+              <img class="box6" src="./img (15).webp" alt="" />
+              <h4>Lorem, ipsum.</h4>
+              <p class="pp">Lorem, ipsum.</p>
             </li>
             <li class="team-li">
-              <img class="box7" src="./team card4(4).webp" alt="" />
+              <img class="box7" src="./img (16).webp" alt="" />
+              <h4>Lorem, ipsum.</h4>
+              <p class="pp">Lorem, ipsum.</p>
             </li>
           </ul>
         </div>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <ul>
         <li><p>Webstudio</p></li>
         <li><address>Lorem, ipsum.</address></li>
